# ElasticaAgents

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  schema_parser.py
elastica_agents/: __init__.py  design_schema.py
elastica_agents/agent_interaction/: mcp_agent.config.yaml
elastica_agents/agents/: __init__.py  main.py  settings.py
elastica_agents/api/: __init__.py  app.py  simulation.py
elastica_agents/cli/: app.py
elastica_agents/llm/: openai.py  workflow.py
elastica_agents/prompts/: designer.py  instructions.py  rendering.py
elastica_agents/tool/: __init__.py  image_check.py  rendering.py
examples/base_handling_design_schema/: design1.json  main.py  schema_parser.py  schema_validation.py
src/elastica_agents/: __init__.py  call_generate_schema_api.py  tools.py
src/elastica_agents/agent_interaction/: agent_a.py  agent_b.py  main.py
src/simulation_api/: client.py  environment.py  server.py
src/softbot_schema_gen/agent/: test_agent.py  test_api.py
tests/: test_simulation_server.py
tests/agents/: test_api.py
tests/simulation_api/: test_simulation_server.py
